test/tests/stages/14_pointers/valid/libraries/global_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: d_ptr
        None: 
        Pointer: 
          Double: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_thru_ptr
        List[1]: 
          TIdentifier: new_val
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CVar: 
                      TIdentifier: d_ptr
                      None: 
                    None: 
                  CVar: 
                    TIdentifier: new_val
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Double: 
          Int: 
        None: 
